[gd_scene load_steps=5 format=2]

[ext_resource path="res://Icons/startPos.png" type="Texture" id=1]
[ext_resource path="res://Scripts/positionScene.gd" type="Script" id=2]
[ext_resource path="res://Styles/style1.tres" type="Theme" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 16 )

[node name="Area2D" type="Area2D"]
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.709804 )
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 64, 64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="posNum" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
theme = ExtResource( 3 )
text = "0"
align = 1
valign = 1

[connection signal="mouse_entered" from="." to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Area2D_mouse_exited"]
